[package]
name = "cubeb-coreaudio-samples"
version = "0.1.0"
edition = "2021"

[dependencies]
bitflags = "2.5"
debug_tree = "0.2"
cubeb-backend = "0.13"
cubeb-coreaudio = { git = "https://github.com/mozilla/cubeb-coreaudio-rs", rev = "1796ace5bdd08ec8baa56bbf7170a08d760c984b", features = [
    "audio-dump",
] }

[dependencies.clap]
features = ["derive"]
version = "4.5"

[dependencies.coreaudio-sys]
default-features = false
features = ["audio_unit", "core_audio", "io_kit_audio"]
version = "0.2.14"


[build-dependencies]
cc = "1.0"
